k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-app
  name: go-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-app
  type: ClusterIP
status:
  loadBalancer: {}
