k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /home
spec:
  ingressClassName: nginx
  rules:
  - host: "golang.bhagatgroups.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-app
            port:
              number: 8080
